fixed pictures not showing on index.html because picture files name had changed

--- a/css/style.css
+++ b/css/style.css
@@ -5,29 +5,40 @@
 	padding: 0;
 }
 
-footer{
-	width: 100%;
-	height: 250px;
+footer {
 	background-color: #702E92;
+	height: 250px;
+	padding: 2% 0;
+	width: 100%;
 }
 
-footer ul li{
-	display: inline;
-	padding-left: 10%;
-}
-
-footer a{
-	text-decoration: none;
+footer a {
 	color: white;
+	display: inline-block;
+	padding: 8% 12%;
+	text-decoration: none;
+
 }
 
-footer a:hover{
-	color: #62D3A4;
+footer a:hover {
+	background-color: #62D3A4;
+	border-radius: 15px;
+	color: #67328D;
 }
 
 footer ul {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	list-style-type: none;
+	margin: 0 20%;
+	width: 60%;
+}
+
+footer ul li {
 	text-align: center;
-	padding-top: 5%;
+	width: calc(100%/3);
 }
 
 p {
@@ -70,7 +81,7 @@ section {
 }
 
 .bottom_left_img {
-	margin-top: 400%;
+	margin-top: 100%;
 }
 
 .bottom_right_img,
@@ -84,7 +95,7 @@ section {
 }
 
 .bottom_right_img {
-	margin-top:300% ;
+	margin-top:100% ;
 }
 
 .dropdown {
@@ -183,9 +194,9 @@ section {
 	width: 100%;
 }
 
-.mention{
+.mention {
+	margin-top: 5%;
 	text-align: center;
-	margin-top: 100px;
 }
 
 .nav_home {
@@ -254,6 +265,9 @@ section {
 	flex-direction: row;
 	list-style-type: none;
 }
+.partner {
+	margin-bottom: 10%;
+}
 
 .partner img {
 	margin-top: 10%;
@@ -282,16 +296,21 @@ section {
 }
 
 .section_title {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 	padding-top: 100px;
 	width: 100%;
 }
 
 .section_title img {
-	width: 50px;
+	height: 50px;
 }
 
 .section_title h1 {
 	color: #06D6A0;
+	margin-left: 2%;
 	text-align: center;
 }
 
